examples/test/testpolicy10477.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10477
  namespace: namespace148
spec:
  podSelector:
    matchLabels:
      key24: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value41
          key35: value23
          key34: value20
      podSelector:
        matchLabels:
          key33: value38
          key11: value26
